--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
   <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap-theme.min.css">
 
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <!--
