--- a/public/index.html
+++ b/public/index.html
@@ -37,4 +37,7 @@
     -->
 </body>
 
+<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" rel="stylesheet" />
+<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+
 </html>
